Various fixes
- Fix positioning issues with misaligned arrows
- Remove gaps between session bar buttons
- Use domReady instead of DOMContentLoaded event
- Use --text-color instead of pure black
- Remove bold style from headings and labels

--- a/indico/web/client/styles/design_system/_popup.scss
+++ b/indico/web/client/styles/design_system/_popup.scss
@@ -10,7 +10,6 @@
 
 %popup-title {
   @extend %reset-font-and-color;
-  font-weight: bold;
   font-size: var(--text-size-rel-l);
 }
 
