--- a/indico/web/client/styles/partials/_main.scss
+++ b/indico/web/client/styles/partials/_main.scss
@@ -240,7 +240,12 @@ nav.main-breadcrumb {
   flex: none;
   display: flex;
   align-items: center;
-  gap: 0.1em;
+
+  color: var(--text-color);
+
+  [data-dialog] {
+    color: inherit;
+  }
 
   .popup-trigger,
   .login {
@@ -267,6 +272,10 @@ nav.main-breadcrumb {
     &:is(:hover, :focus-visible) {
       background: var(--surface-green-secondary-color);
     }
+
+    &::before {
+      @extend %icon-earth;
+    }
   }
 
   .popup-trigger[data-protection-mode='restricted'] {
@@ -276,6 +285,10 @@ nav.main-breadcrumb {
     &:is(:hover, :focus-visible) {
       background: var(--surface-red-secondary-color);
     }
+
+    &::before {
+      @extend %icon-shield;
+    }
   }
 
   .popup-trigger[data-protection-mode='network'] {
@@ -284,6 +297,10 @@ nav.main-breadcrumb {
 
     &:is(:hover, :focus-visible) {
       background: var(--surface-yellow-secondary-color);
+    }
+
+      &::before {
+      @extend %icon-shield;
     }
   }
 
